# UPS_gamba

./: .gitignore
UPS_Chlad/: CMakeLists.txt  changelog.txt
UPS_Chlad/client/: CLIENT_GUIDE.md  Makefile  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  TESTING.md  gamba_client.conf  main.py  requirements.txt  test_card_widget.py  test_network_layer.py  test_with_server.py
UPS_Chlad/client/src/game/: __init__.py  card.py  player.py  rules.py  state.py
UPS_Chlad/client/src/gui/: __init__.py  connection_dialog.py  game_widget.py  lobby_widget.py  main_window.py
UPS_Chlad/client/src/message/: __init__.py  message_buffer.py  message_protocol.py  message_types.py  protocol_message.py  validator.py
UPS_Chlad/client/src/network/: __init__.py  client.py  connection_manager.py  heartbeat_manager.py
UPS_Chlad/client/src/utils/: __init__.py  config.py  constants.py  logger.py
UPS_Chlad/client/tests/: TEST_INSTRUCTIONS.md  run_all_tests.py  test_connection_dialog.py  test_game_layer.py  test_game_log_widget.py  test_game_widget.py  test_main_window.py  test_message_layer.py  test_player_info_widget.py  test_reconnection.py  test_utils_layer.py
UPS_Chlad/server/: Makefile  gamba_server  input.txt  server.conf
UPS_Chlad/server/include/: gamba_server.h  game_logic.h  protocol.h
UPS_Chlad/server/include/core/: GameManager.h  Logger.h  Player.h  PlayerManager.h  Room.h  RoomManager.h  server_config.h
UPS_Chlad/server/include/game/: CardDeck.h  GameLogic.h  GameRules.h
UPS_Chlad/server/include/network/: MessageHandler.h  MessageParser.h  MessageType.h  MessageValidator.h  NetworkManager.h
UPS_Chlad/server/include/protocol/: ProtocolHelper.h  ProtocolMessage.h
UPS_Chlad/server/src/: basic_sever.cpp  basic_sever.h  gamba_server.cpp  game_logic.cpp  main.cpp  protocol.h  server_config.cpp
UPS_Chlad/server/src/core/: GameManager.cpp  Logger.cpp  PlayerManager.cpp  RoomManager.cpp  ServerConfig.cpp
UPS_Chlad/server/src/game/: CardDeck.cpp  GameLogic.cpp  GameRules.cpp
UPS_Chlad/server/src/network/: MessageHandler.cpp  MessageParser.cpp  MessageValidator.cpp  NetworkManager.cpp
UPS_Chlad/server/src/protocol/: ProtocolHelper.cpp  (+1 more)
(+10 files in other folders)
